Hoan thien bai va code chuyen doi qua lai 2 trang

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,19 @@
         android:theme="@style/Theme.BT_ManHinhUngDung">
         <activity
             android:name=".Login_Activity"
-            android:exported="false" />
+            android:exported="true">   <!-- phải là true nếu có intent-filter MAIN/LAUNCHER -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Register_Activity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
