--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BT_ManHinhUngDung">
         <activity
+            android:name=".Profile_Activity"
+            android:exported="false" />
+        <activity
             android:name=".Login_Activity"
-            android:exported="true">   <!-- phải là true nếu có intent-filter MAIN/LAUNCHER -->
+            android:exported="true"> <!-- phải là true nếu có intent-filter MAIN/LAUNCHER -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -24,9 +28,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
